modules/gdscript/tests/scripts/analyzer/errors/nullable_while_narrowing.gd
func test():
    var input: int? = null
    while !input:
        input -= 1 # Should error
